# GraphV

./: LICENSE  Makefile  README.md  project_setup.sh
GraphV/: CMakeLists.txt  project_setup.sh
GraphV/src/: graph.h  qlib.c  qlib.h
notes/: 24_01_18.txt
raylib/src/: libraylib.so.5.5.0
src/: graph.c  graph.h  main.c  mandelbrot.c  qlib.c  qlib.h  quick_lib.c  quick_lib.h
